# Doc-s-Task

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: main.cpp
src/core/: CoreTypes.cpp  CoreTypes.h  GameManager.cpp  GameManager.h  Level.cpp  Level.h
src/levels/: Level1.h  Levels.cpp  Levels.h
src/ui/: UIManager.cpp  UIManager.h
tools/LevelEditor/: CMakeLists.txt  LevelEditor.cpp
